--- a/templates/main.html
+++ b/templates/main.html
@@ -21,11 +21,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                {{ team }}
-            </div>
+
+        <div class="team-area row justify-content-center">
+            {{ team }}
         </div>
+    </div>
     </div>
 </body>
 
